[package]
name = "undertale_mod_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = {version = "0.34.3", features = ["serde"]}
eframe = "0.34.3"
egui_extras = {version = "0.34.3", features = ["all_loaders"]}
image = {version = "0.25", features = ["ico", "png", "jpeg"]}
ico = "0.5.0"
xdelta3 = {path = "../xdelta3"}
fs_extra = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
thiserror = "2.0.18"
lnk = "0.6.4"
zip = "8.6.0"
