[package]
name = "undertale_mod_manager"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "instxller"
path = "installer_src/main.rs"

[dependencies]
egui = {version = "0.35.0", features = ["serde"]}
eframe = "0.35.0"
egui_extras = {version = "0.35.0", features = ["all_loaders"]}
image = {version = "0.25.10", features = ["ico", "png", "jpeg"]}
ico = "0.5.0"
xdelta3 = {path = "../xdelta3"}
fs_extra = "1.3.0"
serde = { version = "1.0.229", features = ["derive"] }
toml = "1.1.3+spec-1.1.0"
thiserror = "2.0.19"
lnk = "0.6.4"
zip = "8.6.0"
reqwest = {version = "0.13.4", features = ["json"]}
serde_json = "1.0.150"
smol = "2.0.2"
